# clauderig

./: .gitignore  CHANGES.md  CLAUDE.md  CONTEXT.md  MANIFEST.in  PROJECT_EXPLAINED.md  README.md  build-linux.sh  build-macos.sh  build-mytool-macos.sh  clauderig.gpg  clauderig.spec  install.sh  mytool.spec  pyproject.toml  rthook_clauderig.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: build-engineer.md  code-reviewer.md  security-auditor.md
.claude/commands/: add-endpoint.md  add-test.md  db-migration.md  review.md
.claude/hooks/: hooks.json
.claude/hooks/scripts/: firewall.sh  test-enforcer.sh
.claude/memory/: conventions.md  project.md  stack.md
.claude/rules/: coding-standards.md
.claude/skills/async-db/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/pydantic-models/: SKILL.md
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-04-25-clauderig-implementation.md
docs/superpowers/specs/: 2026-04-25-clauderig-design.md  2026-05-09-agents-per-stack-design.md
src/clauderig/: __init__.py  __main__.py  analyzer.py  cli.py  installer.py
src/clauderig/templates/php/.claude/: CLAUDE.md  settings.json
src/clauderig/templates/python-django/.claude/: CLAUDE.md  settings.json
src/clauderig/templates/python-fastapi/: CLAUDE.md
src/clauderig/templates/react-native/: CLAUDE.md
src/clauderig/templates/react-native/.claude/: settings.json
src/clauderig/templates/react-web/.claude/: CLAUDE.md  settings.json
tests/: test_analyzer.py  test_cli.py  test_installer.py
(+89 files in other folders)
