[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clauderig"
version = "0.1.0"
description = "Bootstrap a production-grade .claude/ setup into any project, instantly."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "harshit jangid " }]
keywords = ["claude", "claude-code", "cli", "scaffold", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["typer>=0.12", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "build>=1.0", "twine>=5.0"]

[project.scripts]
claude-setup = "clauderig.cli:app"

[project.urls]
Homepage = "https://github.com/harshit9413/clauderig"
Repository = "https://github.com/harshit9413/clauderig"
Issues = "https://github.com/harshit9413/clauderig/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clauderig = [
  "templates/**/.claude/*",
  "templates/**/.claude/**/*",
]
